# libffi

./: .gitignore  CMakeLists.txt  configure_options.cmake
include/: ffi_common.h  fficonfig.h.in
src/x86/: unix64.S
